<resources>
    <array name="inquilinos">
        <item>Nombre: Layca Fernandez Telefono: 2664755056 Email: fernan@gmail.com</item>
        <item>Nombre: Lorena Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Juani Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Benj Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Tito Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Mora Fernandez Telefono: 2664755056 Email:fernan@gmai.com</item>
        <item>Nombre: Yuyin Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Roque Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
    </array>

    <string name="app_name">Inmobiliaria_010</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juan Carlos Fernandez</string>
    <string name="nav_header_subtitle">jcf@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_perfil">Perfil</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_propiedades">Propiedades</string>
    <string name="menu_Inquilinos">Inquilinos</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_contrato">Contratos</string>
    <string name="menu_cerrarsesion">Cerrar Sesion</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="propiedad">
        <item><nombre>Departamento 1 </nombre></item>
        <item><nombre>Departamento 2 </nombre></item>
        <item><nombre>Departamento 3 </nombre></item>
        <item><nombre>Departamento 4 </nombre></item>
        <item><nombre>Departamento 5 </nombre></item>
        <item><nombre>Departamento 6 </nombre></item>
    </string-array>
</resources>

