<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_propiedades"
            android:icon="@drawable/propidad"
            android:title="@string/menu_propiedades" />
        <item
            android:id="@+id/nav_inquilinos"
            android:icon="@drawable/inquilino"
            android:title="@string/menu_Inquilinos" />
        <item
            android:id="@+id/nav_pagos"
            android:icon="@drawable/pago"
            android:title="@string/menu_pagos" />
        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/contrato"
            android:title="@string/menu_contrato" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />

    </group>

    <item android:title="Salida">
        <menu>
            <item
                android:id="@+id/nav_cerrarsesion"
                android:icon="@drawable/cerrarsesion"
                android:title="@string/menu_cerrarsesion" />
        </menu>
    </item>

</menu>
