<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_propiedades">

    <fragment
        android:id="@+id/nav_propiedades"
        android:name="com.example.inmobiliaria_010.ui.propiedades.PropiedadesFragment"
        android:label="@string/menu_propiedades"
        tools:layout="@layout/fragment_propiedades" >
        <action
            android:id="@+id/action_nav_propiedades_to_nav_detalle_propiedades"

            app:destination="@id/nav_detalle_propiedades" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmobiliaria_010.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_Inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.example.inmobiliaria_010.ui.contrato.ContratoFragment"
        android:label="@string/menu_contrato"
        tools:layout="@layout/fragment_contrato" >
        <action
            android:id="@+id/action_nav_contrato_to_nav_detalle_contrato"
            app:destination="@id/nav_detalle_contrato" />
    </fragment>

    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.example.inmobiliaria_010.ui.pagos.PagosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_nav_pagos_to_nav_detalle_pago"
            app:destination="@id/nav_detalle_pago" />
    </fragment>

    <fragment
        android:id="@+id/nav_cerrarsesion"
        android:name="com.example.inmobiliaria_010.ui.cerrarsesion.CerrarsesionFragment"
        android:label="@string/menu_cerrarsesion"
        tools:layout="@layout/fragment_cerrarsesion" />

    <fragment
        android:id="@+id/nav_detalle_propiedades"
        android:name="com.example.inmobiliaria_010.ui.propiedades.Detalle_Propiedades"
        android:label="Propiedad Detalle"
        tools:layout="@layout/fragment_detalle_propiedades" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliaria_010.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_detalle_contrato"
        android:name="com.example.inmobiliaria_010.ui.contrato.Detalle_Contrato"
        android:label="Detalle Contrato"
        tools:layout="@layout/fragment_detalle_contrato" />

    <fragment
        android:id="@+id/nav_detalle_pago"
        android:name="com.example.inmobiliaria_010.ui.pagos.Detalle_Pago"
        android:label="Detalle Pago"
        tools:layout="@layout/fragment_detalle_pago" />


</navigation>